--- a/docs/.vitepress/theme/custom.styl
+++ b/docs/.vitepress/theme/custom.styl
@@ -79,20 +79,20 @@ a.sidebar-link-item.active{
 
 }
 
-.container pre, .container pre>code.hljs{
-  background: #fefefe;
-  color: #545454;
-}
+// .container pre, .container pre>code.hljs{
+//   background: #fefefe;
+//   color: #545454;
+// }
 
-.container pre:before{
-  content: "";
-  display: block;
-  height: 40px;
-  width: 100%;
-  background url("/md.png") 0 0 no-repeat
-  margin-bottom: -7px;
-  background-size: 40px;
-}
+// .container pre:before{
+//   content: "";
+//   display: block;
+//   height: 40px;
+//   width: 100%;
+//   background url("/md.png") 0 0 no-repeat
+//   margin-bottom: -7px;
+//   background-size: 40px;
+// }
 
 
 .container .octicon {
@@ -190,23 +190,23 @@ a.sidebar-link-item.active{
   border-style: none;
 }
 
-.container code,
-.container kbd,
-.container pre {
-  font-family: monospace,monospace;
-  font-size: 1em;
-}
+// .container code,
+// .container kbd,
+// .container pre {
+//   font-family: monospace,monospace;
+//   font-size: 1em;
+// }
 
-.container pre {
-  line-height 15px
-  box-shadow: 0 0 8px hsla(0,0%,43.1%,.45);
-  border-radius: 4px;
-  padding: 16px;
-  overflow: auto;
-  font-size: 18px;
-  letter-spacing 1px
-  background-color: #ffffff;
-}
+// .container pre {
+//   line-height 15px
+//   box-shadow: 0 0 8px hsla(0,0%,43.1%,.45);
+//   border-radius: 4px;
+//   padding: 16px;
+//   overflow: auto;
+//   font-size: 18px;
+//   letter-spacing 1px
+//   background-color: #ffffff;
+// }
 
 .container hr {
   box-sizing: initial;
@@ -459,16 +459,16 @@ a.sidebar-link-item.active{
   margin-left: 0;
 }
 
-.container code,
-.container pre {
-  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
-  font-size: 12px;
-}
+// .container code,
+// .container pre {
+//   font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+//   font-size: 12px;
+// }
 
-.container pre {
-  margin-top: 0;
-  margin-bottom: 0;
-}
+// .container pre {
+//   margin-top: 0;
+//   margin-bottom: 0;
+// }
 
 .container input::-webkit-inner-spin-button,
 .container input::-webkit-outer-spin-button {
@@ -818,7 +818,7 @@ a.sidebar-link-item.active{
 .container dl,
 .container ol,
 .container p,
-.container pre,
+// .container pre,
 .container table,
 .container ul {
   margin-top: 0;
@@ -937,37 +937,37 @@ a.sidebar-link-item.active{
   color: var(--color-code);
 }
 
-.container pre {
-  word-wrap: normal;
-}
+// .container pre {
+//   word-wrap: normal;
+// }
 
-.container pre>code {
-  padding: 0;
-  margin: 0;
-  font-size: 100%;
-  word-break: normal;
-  white-space: pre;
-  background: transparent;
-  border: 0;
-}
+// .container pre>code {
+//   padding: 0;
+//   margin: 0;
+//   font-size: 100%;
+//   word-break: normal;
+//   white-space: pre;
+//   background: transparent;
+//   border: 0;
+// }
 
 .container .highlight {
   margin-bottom: 16px;
 }
 
-.container .highlight pre {
-  margin-bottom: 0;
-  word-break: normal;
-}
+// .container .highlight pre {
+//   margin-bottom: 0;
+//   word-break: normal;
+// }
 
-.container .highlight pre{
-  padding: 16px;
-  overflow: auto;
-  font-size: 85%;
-  line-height: 1.45;
-  background-color: #f6f8fa;
-  border-radius: 3px;
-}
+// .container .highlight pre{
+//   padding: 16px;
+//   overflow: auto;
+//   font-size: 85%;
+//   line-height: 1.45;
+//   background-color: #f6f8fa;
+//   border-radius: 3px;
+// }
 
 .container pre code {
   display: inline;
@@ -1125,9 +1125,9 @@ a.sidebar-link-item.active{
   margin: 0 .2em .25em -1.6em;
   vertical-align: middle;
 }
-.container pre{
-  background-color var(--code-bg-color)
-}
+// .container pre{
+//   background-color var(--code-bg-color)
+// }
 h3:not(h2 + h3){
   border-top: 2px dashed #d6d6d6;
   padding-top: 1.5rem;
