--- a/docs/.vitepress/theme/custom.styl
+++ b/docs/.vitepress/theme/custom.styl
@@ -70,10 +70,10 @@ p.description{
     padding: 4px
     border: 1px solid #eeeeee !important
     cursor: zoom-in
-  li
-    list-style: disc
-    li
-      list-style: circle
+  // li
+  //   list-style: disc
+  //   li
+  //     list-style: circle
 
 a.sidebar-link-item.active{
 
