--- a/docs/.vitepress/theme/custom.styl
+++ b/docs/.vitepress/theme/custom.styl
@@ -1,7 +1,6 @@
 :root{
   --c-brand #AE4BD5//#7719AA//#23d0d0
   --c-brand-light #CA64EA
-
   // 主色调
   --color-main var(--c-brand)
   // 底部栏色调
@@ -19,6 +18,8 @@
   --color-code-bg rgba(77,208,225,.08)
   // 引用背景色
   --color-block-bg  rgba(217, 136, 241, 0.15)//rgba(77,208,225,.15)
+
+  --font-family-mono 'Source Code Pro', Menlo, Monaco, Consolas, 'Courier New', monospace // 覆盖默认字体配置
 }
 
 .home-features .container h2{
