--- a/docs/.vitepress/theme/custom.styl
+++ b/docs/.vitepress/theme/custom.styl
@@ -929,14 +929,14 @@ a.sidebar-link-item.active{
   padding-right: 20px;
 }
 
-// .container code {
-  // padding: .2em .4em;
+.container code {
+  padding: .2em .4em;
   // margin: 0;
   // font-size: 85%;
   // border-radius: 3px;
   // background: var(--color-code-bg);
   // color: var(--color-code);
-// }
+}
 
 // .container pre {
 //   word-wrap: normal;
