--- a/docs/.vitepress/theme/custom.styl
+++ b/docs/.vitepress/theme/custom.styl
@@ -437,28 +437,13 @@ a.sidebar-link-item.active{
   background var(--color-block-bg)
 }
 
-.container ol,
-.container ul {
-  padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+// .container ol,
+// .container ul {
+//   padding-left: 0;
+//   margin-top: 0;
+//   margin-bottom: 0;
+// }
 
-.container ol ol,
-.container ul ol {
-  list-style-type: lower-roman;
-}
-
-.container ol ol ol,
-.container ol ul ol,
-.container ul ol ol,
-.container ul ul ol {
-  list-style-type: lower-alpha;
-}
-
-.container dd {
-  margin-left: 0;
-}
 
 // .container code,
 // .container pre {
@@ -847,9 +832,24 @@ a.sidebar-link-item.active{
   margin-bottom: 0;
 }
 
-.container ol,
-.container ul {
-  padding-left: 2em;
+// .container ol,
+// .container ul {
+//   padding-left: 2em;
+// }
+.container ol ol,
+.container ul ol {
+  list-style-type: lower-roman;
+}
+
+.container ol ol ol,
+.container ol ul ol,
+.container ul ol ol,
+.container ul ul ol {
+  list-style-type: lower-alpha;
+}
+
+.container dd {
+  margin-left: 0;
 }
 
 .container ol ol,
